# snappy-erlang-nif

./: .gitignore  .gitmodules  Makefile  README.md  TODO.txt  enc  rebar  rebar.config  rebar.config.script  rebar3
c_src/: Makefile  erl_nif_compat.h  snappy.cc  snappy_nif.cc
c_src/google-snappy/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
c_src/google-snappy/autom4te.cache/: output.0  requests  traces.0  traces.1
c_src/google-snappy/m4/.svn/: entries
src/: snappy.app.src  snappy.erl
support/: build-google-snappy.sh  clean-google-snappy.sh
test/: snappy_tests.erl
